# bridgevm

./: .gitignore  Cargo.toml  GOAL.md  HANDOFF.md  PLAN.md  README.md  STATUS.md
.github/: dependabot.yml
crates/bridgevm-api/: Cargo.toml
crates/bridgevm-api/src/: boot_media.rs  boot_media_meta.rs  contract.rs  diagnostics.rs  dispatch.rs  evidence_read.rs  evidence_util.rs  evidence_verify.rs  guest_tools.rs  launch_readiness.rs  lib.rs  network.rs  performance.rs  readiness.rs  records.rs  request.rs  response.rs  shares.rs  ssh_ports.rs  test_support.rs
crates/bridgevm-api/src/process/: apple_vz.rs  compatibility.rs  display.rs  fast_backend.rs  lifecycle.rs  mod.rs
crates/bridgevm-api/src/process_tests/: part_1.rs
crates/bridgevm-api/src/records_tests/: mod.rs  part_1.rs
crates/bridgevm-api/src/request_tests/: mod.rs  part_1.rs  part_2.rs
crates/bridgevm-api/src/response_tests/: mod.rs  part_1.rs  part_2.rs  part_3.rs  part_4.rs  part_5.rs
crates/bridgevm-cli/: Cargo.toml
crates/bridgevm-cli/src/: boot_media.rs  clone_migrate.rs  daemon_io.rs  disk.rs  doctor.rs  entry.rs  json_util.rs  main.rs  report.rs  request.rs  runtime_print.rs  snapshot.rs  ssh_runtime.rs  test_support.rs  title_gate.rs  vm_cmds.rs
crates/bridgevm-cli/src/args/: core.rs  mod.rs  probe_args.rs  store_args.rs  tool_args.rs
crates/bridgevm-cli/src/args_tests/: mod.rs  part_1.rs  part_2.rs  part_3.rs
crates/bridgevm-cli/src/request_tests/: part_1.rs
crates/bridgevm-daemon/: Cargo.toml
crates/bridgevm-daemon/src/: backend_lifecycle.rs  backend_spawn.rs  cli.rs  connect_supervisor_qmp.rs  daemon_state.rs  guest_tools_protocol.rs  guest_tools_runtime_metadata.rs  guest_tools_session.rs  helper_preflight.rs  ipc_listener.rs  main.rs  optional_u16_env.rs  performance_sample.rs  proxy_window_crop_artifacts.rs  proxy_window_crop_config.rs  qmp_supervisor.rs  qmp_supervisor_drain_limit.rs  qmp_supervisor_drain_limit_impl_2.rs  qmp_supervisor_drain_limit_impl_3.rs  qmp_supervisor_drain_limit_impl_4.rs  qmp_supervisor_drain_limit_impl_5.rs  snapshot_orchestration.rs  spawn_config.rs  supervisor_loop.rs  unix_time.rs
crates/bridgevm-daemon/src/tests_split/: helpers.rs  mod.rs  part_1.rs  part_2.rs  part_3.rs  part_4.rs  part_4_2.rs
crates/bridgevm-qemu/: Cargo.toml
crates/bridgevm-qemu/src/: arg_encoding.rs  bundle_paths.rs  command_builder.rs  error.rs  lib.rs  max_qmp_envelope_bytes.rs  netdev.rs  profile.rs  qemu_img.rs  qmp_client.rs  qmp_commands.rs  qmp_messages.rs  qmp_operations.rs  resolve_bundle_path.rs  snapshot_jobs.rs  vnc_display.rs
crates/bridgevm-qemu/src/tests_split/: helpers.rs  part_1.rs  part_2.rs
crates/bridgevm-storage/: Cargo.toml
crates/bridgevm-storage/src/: active_disk.rs  application_consistent_snapshot.rs  bundle_archive.rs  bundle_copy.rs  bundle_layout.rs  bundle_metadata.rs  clock.rs  command_runner.rs  disk_metadata.rs  disk_operations.rs  disk_preparation.rs  error.rs  guest_tools_metadata.rs  guest_tools_store.rs  lib.rs  live_evidence.rs  metadata_json.rs  metadata_lock.rs  metadata_repair.rs  path_resolution.rs  runner_store.rs  runtime_control_store.rs  runtime_metadata.rs  runtime_state.rs  snapshot_catalog.rs  snapshot_disk.rs  snapshot_metadata.rs  store.rs  suspend_image.rs  temp_paths.rs  validate_transition.rs  vm_clone.rs  vm_registry.rs  vm_transfer.rs
crates/bridgevm-storage/src/is_false/: diskverifymetadata.rs  is_false.rs  mod.rs
crates/bridgevm-storage/src/tests_split/: helpers.rs  mod.rs  part_1.rs  part_2.rs  part_3_1.rs  part_3_2.rs  part_3_3.rs
docs/: README.md  development-system.md  document-manifest.tsv  hvf-3d-current-wall-20260713.md  hvf-3d-engine-plan.md  hvf-3d-native-ui-shader-fix-20260714.md  hvf-3d-perf-baseline-20260714.md  hvf-3d-submit-wall-resolution-20260714.md  hvf-async-scanout-readback-20260721.md  hvf-competitive-architecture-and-risk-policy.md  hvf-dxvk-d3d11-bringup-20260721.md  hvf-gpu-thread-design-20260721.md  hvf-graphics-integration-gap-plan.md  hvf-kd-serial-bringup.md  hvf-ladder-closure-20260721.md  hvf-lib-refactor-extraction-plan.md  hvf-p3-windows-3d-plan.md  hvf-perf-optimization-plan.md  hvf-real-title-ppsspp-20260721.md  hvf-scanout-readback-ab-20260721.md  hvf-venus-fence-latency-resolution-20260721.md  hvf-venus-hostvisible-map-resolution-20260720.md  hvf-venus-hostvisible-map-wall-20260720.md  hvf-venus-resflush-d1-resolution-20260719.md  hvf-venus-wddm-display-resolution-20260719.md  hvf-windows-app-install-firstboot-wall-20260714.md  hvf-windows-engine-strategy.md  hvf-windows-install-completion-plan.md  hvf-windows-platform-contract-gap.md  hvf-windows-v1-suspend-decision.md  refactor-handoff.md  release-readiness-20260724.md
runners/bridgevm-tools-linux/: Cargo.toml  README.md
runners/bridgevm-tools-linux/src/: benchmark.rs  bounded_process.rs  cli.rs  clipboard_effects.rs  clipboardwriter.rs  clock_effects.rs  desktop_commands.rs  desktop_controller.rs  desktop_input.rs  desktop_inventory.rs  display_resize_effects.rs  effect_backend_detection.rs  effect_command_path.rs  filesystem_freeze_effects.rs  guest_tools_state.rs  handshake.rs  main.rs  safe_file_drop_destination.rs  session_loop.rs  share_and_file_drop_commands.rs  system_commands.rs  telemetry.rs  xdotool_button.rs  xdotool_button_impl_2.rs
runners/bridgevm-tools-linux/src/tests_split/: helpers.rs  part_1.rs  part_2.rs  part_2_2.rs  part_3.rs
runners/fullvm-runner/: Cargo.toml
runners/fullvm-runner/src/: main.rs
runners/hvf-runner/: Cargo.toml
runners/hvf-runner/src/: args.rs  lib.rs  main.rs  resolve_launch_path.rs  task5af.rs  task5af_evidence.rs
runners/hvf-runner/src/tests_split/: mod.rs  part_1.rs
runners/hvf-runner/tests/: task5af.rs
runners/lightvm-runner/: Cargo.toml
runners/lightvm-runner/src/: args.rs  main.rs
runners/lightvm-runner/src/tests_split/: helpers.rs  part_1.rs
scripts/: build-guest-agent-linux.sh  build-hvf-edk2-secure-firmware.sh  build-hvf-windows-d3d10-smoke.sh  build-hvf-windows-driver-injector.sh  build-hvf-windows-scripted-source.sh  build-venus-host-deps.sh  (+35 more)
(+1066 files in other folders)
