[workspace]
members = [
  "crates/bridgevm-agent-protocol",
  "crates/bridgevm-agentd",
  "crates/bridgevm-apple-vz",
  "crates/bridgevm-api",
  "crates/bridgevm-cli",
  "crates/bridgevm-config",
  "crates/bridgevm-core",
  "crates/bridgevm-daemon",
  "crates/bridgevm-fullvm",
  "crates/bridgevm-hvf",
  "crates/bridgevm-lightvm",
  "crates/bridgevm-network",
  "crates/bridgevm-qemu",
  "crates/bridgevm-resource-manager",
  "crates/bridgevm-storage",
  "runners/bridgevm-tools-linux",
  "runners/displayd",
  "runners/fullvm-runner",
  "runners/hvf-runner",
  "runners/lightvm-runner",
  "runners/networkd",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bridgevm/bridgevm"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
tar = "0.4"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = 1
