[package]
name = "bridgevm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bridgevm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bridgevm-agent-protocol = { path = "../bridgevm-agent-protocol" }
bridgevm-apple-vz = { path = "../bridgevm-apple-vz" }
bridgevm-api = { path = "../bridgevm-api" }
bridgevm-config = { path = "../bridgevm-config" }
bridgevm-core = { path = "../bridgevm-core" }
bridgevm-hvf = { path = "../bridgevm-hvf" }
bridgevm-qemu = { path = "../bridgevm-qemu" }
bridgevm-storage = { path = "../bridgevm-storage" }
clap.workspace = true
serde_json.workspace = true
