[package]
name = "bridgevm-qemu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridgevm-config = { path = "../bridgevm-config" }
bridgevm-network = { path = "../bridgevm-network" }
bridgevm-resource-manager = { path = "../bridgevm-resource-manager" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
