[package]
name = "bridgevm-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridgevm-config = { path = "../bridgevm-config" }
bridgevm-qemu = { path = "../bridgevm-qemu" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar.workspace = true
thiserror.workspace = true
