[package]
name = "bridgevm-tools-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bridgevm-agent-protocol = { path = "../../crates/bridgevm-agent-protocol" }
bridgevm-agentd = { path = "../../crates/bridgevm-agentd" }
clap.workspace = true
serde_json.workspace = true
