[package]
name = "bridgevm-tools-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bridgevm-agent-protocol = { path = "../../crates/bridgevm-agent-protocol" }
bridgevm-agentd = { path = "../../crates/bridgevm-agentd" }
clap.workspace = true
serde_json.workspace = true

# settimeofday(2) for real guest clock sync; only needed on the Linux guest
# target. The crate still builds on macOS (for unit tests) without it.
[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
