[package]
name = "hvf-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bridgevm-hvf = { path = "../../crates/bridgevm-hvf" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
