[package]
name = "lightvm-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bridgevm-apple-vz = { path = "../../crates/bridgevm-apple-vz" }
bridgevm-config = { path = "../../crates/bridgevm-config" }
bridgevm-lightvm = { path = "../../crates/bridgevm-lightvm" }
bridgevm-core = { path = "../../crates/bridgevm-core" }
bridgevm-storage = { path = "../../crates/bridgevm-storage" }
clap.workspace = true
serde_json.workspace = true
